--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import './assets/styles/frame.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
